# seedctl

./: CHANGELOG.md  Cargo.toml  DISCLAIMER.md  LEGAL.md  LICENSE  LICENSE-THIRD-PARTY  Makefile  NOTICE  README.md  REPRODUCIBILITY.md  SECURITY.md  cliff.toml
.github/logo/: LICENSE
.github/workflows/: installer.yml.disabled
installer/: linux.sh  windows.ps1
seedctl/: Cargo.toml  resource.rc
