[workspace]
resolver = "2"
members = ["crates/*", "seedctl"]

# git-cliff to CHANGELOG.md
[workspace.metadata.bin]
git-cliff = { version = "2.12.0" }

[workspace.package]
description = "Deterministic, auditable, security-focused multichain wallet manager."
repository = "https://github.com/orbitbits/seedctl"
version = "0.2.2"
authors = ["OrbitBits <contact.orbitbits@gmail.com>"]
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
seedctl-core = { path = "crates/seedctl-core" }
seedctl-btc = { path = "crates/seedctl-btc" }
seedctl-eth = { path = "crates/seedctl-eth" }
seedctl-bnb = { path = "crates/seedctl-bnb" }
seedctl-xrp = { path = "crates/seedctl-xrp" }
seedctl-trx = { path = "crates/seedctl-trx" }
seedctl-sol = { path = "crates/seedctl-sol" }
seedctl-ltc = { path = "crates/seedctl-ltc" }
seedctl-matic = { path = "crates/seedctl-matic" }
seedctl-ada = { path = "crates/seedctl-ada" }
seedctl-xmr = { path = "crates/seedctl-xmr" }
anyhow = "1.0.101"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
bip32 = { version = "0.5", features = ["secp256k1"] }
serde_json = "1"
dialoguer = "0.12.0"
console = "0.16.2"
hex = "0.4.3"
rand = "0.10.0"
crossterm = "0.29.0"
sha2 = "0.10.9"
bip39 = "2.2.2"

# -------- Optimization --------
[profile.dev.package."*"]
opt-level = 0
incremental = true
debug = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = false
