[package]
name = "seedctl"
version.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[package.metadata]
copyright_year = "2026"
maintainer = "OrbitBits"

[dependencies]
# Crates project
seedctl-core = { workspace = true }
seedctl-btc = { workspace = true }
seedctl-eth = { workspace = true }
seedctl-bnb = { workspace = true }
seedctl-xrp = { workspace = true }
seedctl-trx = { workspace = true }
seedctl-sol = { workspace = true }
seedctl-ltc = { workspace = true }
seedctl-matic = { workspace = true }
seedctl-ada = { workspace = true }
seedctl-xmr = { workspace = true }

# Crates vendors
console = { workspace = true }
dialoguer = { workspace = true }
crossterm = { workspace = true }
bip39 = { workspace = true }
if-addrs = "0.15.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
